package stock.manager.ui.stock_manager;

import java.math.BigDecimal;

public class StockWithPrice {
    public String ticker;
    public BigDecimal quantity;
    public BigDecimal totalCost;
    public BigDecimal cost;

    public BigDecimal price;
    public BigDecimal totalGain;
    public BigDecimal gain;
    public BigDecimal totalValue;
    public BigDecimal returnRate;
}
